--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,6 @@
   "exports": {
     "./globals.css": "./src/styles/globals.css",
     "./postcss.config": "./postcss.config.mjs",
-    "./tailwind.config": "./tailwind.config.ts",
     "./lib/*": "./src/lib/*.ts",
     "./components/*": "./src/components/*.tsx",
     "./hooks/*": "./src/hooks/*.ts"
@@ -75,6 +74,7 @@
     "@types/react-dom": "19.0.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.1",
     "react": "^19.0.0",
     "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2"
