--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "@app/web",
+  "name": "@app/dashboard",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
-    "build": "vite build && tsc",
-    "start": "vite preview",
+    "start": "vinxi start",
+    "build": "vinxi build",
+    "serve": "vite preview",
     "test": "vitest run",
+    "dev": "vinxi dev",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format .",
@@ -14,15 +15,22 @@
   },
   "dependencies": {
     "@app/ui": "workspace:*",
+    "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
+    "@tanstack/react-router-with-query": "^1.114.3",
+    "@tanstack/react-start": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
+    "vinxi": "^0.5.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
