--- a/biome.json
+++ b/biome.json
@@ -1,59 +1,31 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "vcs": {
+    "enabled": false,
+    "clientKind": "git",
+    "useIgnoreFile": false
+  },
+  "files": {
+    "ignoreUnknown": false,
+    "ignore": ["src/routeTree.gen.ts"],
+    "include": ["src/*", ".vscode/*", "index.html", "vite.config.js"]
+  },
+  "formatter": {
+    "enabled": true,
+    "indentStyle": "tab"
+  },
   "organizeImports": {
     "enabled": true
   },
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true,
-      "correctness": {
-        "noUnusedVariables": "warn",
-        "useExhaustiveDependencies": "off",
-        "noUnusedImports": "error"
-      },
-      "suspicious": {
-        "noConsole": "warn",
-        "noExplicitAny": "off",
-        "noArrayIndexKey": "off"
-      },
-      "complexity": {
-        "noForEach": "off"
-      },
-      "style": {
-        "useTemplate": "error",
-        "noUnusedTemplateLiteral": {
-          "level": "error"
-        },
-        "noNonNullAssertion": "warn"
-      },
-      "nursery": {
-        "useSortedClasses": {
-          "level": "error",
-          "fix": "safe"
-        }
-      }
+      "recommended": true
     }
-  },
-  "formatter": {
-    "enabled": true,
-    "indentStyle": "space",
-    "indentWidth": 2,
-    "lineWidth": 100
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "double",
-      "trailingCommas": "all",
-      "semicolons": "always"
+      "quoteStyle": "double"
     }
-  },
-  "files": {
-    "ignore": [
-      ".react-email",
-      ".next",
-      "node_modules/*",
-      "./packages/database/src/zod/index.ts"
-    ]
   }
 }
