--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "format": "turbo run format",
     "format:fix": "turbo run format:fix",
     "start": "turbo run start",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "db:push": "pnpm --filter=@app/database push",
+    "db:migrate": "pnpm --filter=@app/database migrate",
+    "db:studio": "pnpm --filter=@app/database studio",
+    "db:generate": "pnpm --filter=@app/database generate"
   },
   "devDependencies": {
     "turbo": "^2.4.4"
