--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,14 @@ DATABASE_URL=your_database_url
 
 RESEND_API_KEY=your_resend_api_key
 MAIL_FROM=noreply@yourdomain.com
+
+ENABLE_SIGNUP=false
+
+# Base URL
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# OAuth providers
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
