--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -14,6 +14,7 @@
     "format:fix": "biome format --write ."
   },
   "dependencies": {
+    "@app/auth": "workspace:*",
     "@app/ui": "workspace:*",
     "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/postcss": "^4.0.7",
