--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "turbo run dev",
-    "build": "turbo run build",
+    "dev": "dotenv -c -- turbo run dev",
+    "build": "dotenv -c -- turbo run build",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "format": "turbo run format",
     "format:fix": "turbo run format:fix",
-    "start": "turbo run start",
+    "start": "dotenv -c -- turbo run start",
     "test": "turbo run test",
     "db:push": "pnpm --filter=@app/database push",
     "db:migrate": "pnpm --filter=@app/database migrate",
@@ -17,7 +17,8 @@
     "db:generate": "pnpm --filter=@app/database generate"
   },
   "devDependencies": {
-    "turbo": "^2.4.4"
+    "turbo": "^2.4.4",
+    "dotenv-cli": "^8.0.0"
   },
   "packageManager": "pnpm@9.15.0"
 }
