--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@app/env": "workspace:*",
     "@prisma/client": "^6.3.1",
     "zod": "^3.24.2"
   },
