--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ ENABLE_SIGNUP=false
 # Base URL
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
+BETTER_AUTH_SECRET=some_secret_token
+
 # OAuth providers
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
