--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,7 @@
       "outputs": ["dist/**"],
       "env": [
         "DATABASE_URL",
+        "BETTER_AUTH_SECRET",
         "RESEND_API_KEY",
         "MAIL_FROM",
         "ENABLE_SIGNUP",
@@ -24,6 +25,7 @@
       "persistent": true,
       "env": [
         "DATABASE_URL",
+        "BETTER_AUTH_SECRET",
         "RESEND_API_KEY",
         "MAIL_FROM",
         "ENABLE_SIGNUP",
@@ -36,6 +38,7 @@
       "dependsOn": ["build"],
       "env": [
         "DATABASE_URL",
+        "BETTER_AUTH_SECRET",
         "RESEND_API_KEY",
         "MAIL_FROM",
         "ENABLE_SIGNUP",
