--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ ENABLE_SIGNUP=false
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
 BETTER_AUTH_SECRET=some_secret_token
+BETTER_AUTH_URL=http://localhost:3000
 
 # OAuth providers
 GOOGLE_CLIENT_ID=your_google_client_id
