--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-router-with-query": "^1.114.3",
     "@tanstack/react-start": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "localforage": "^1.10.0",
     "lucide-react": "0.482.0",
     "postcss": "^8.5.2",
     "react": "^19.0.0",
