fix(mail): implement email service with fallback provider
Implemented the email service by connecting auth and mail packages. Email sending is currently not working in production due to Resend API issues, but a fallback console provider has been added for development.

Key changes:
- Fixed path aliases in mail package for proper imports
- Added better error handling for email sending failures
- Added configuration validation to catch environment issues early

Note: Production email sending requires setting up a valid RESEND_API_KEY and verifying the sender email in Resend dashboard.

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@app/env": "workspace:*",
     "@app/database": "workspace:*",
+    "@app/mail": "workspace:*",
     "better-auth": "1.1.21",
     "cookie": "^1.0.2",
     "next": "15.1.7"
