feat(auth): Improve password reset flow with robust token handling
Implemented a more secure and user-friendly password reset flow with proper token validation and error handling. This commit focuses on enhancing the user experience during password reset while improving security measures.

Key changes:
- Added token validation at the route level using beforeLoad hook
- Created dedicated token error page to handle various token issues
- Enhanced the reset password form with better error handling
- Added proper redirects for different token-related edge cases
- Improved UX with clear feedback on password requirements
- Updated route structure to support the new token validation flow
- Enhanced error messages to guide users when errors occur

The new implementation validates tokens before rendering the reset password page, redirecting to a dedicated error page with helpful instructions when issues are detected. This prevents users from filling out forms that would ultimately fail due to token problems and provides clear paths to resolution.

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "vinxi start",
+    "start": "PORT=3001 vinxi start",
     "build": "vinxi build",
     "serve": "vite preview",
     "test": "vitest run",
