--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "PORT=3001 vinxi start",
+    "start": "vinxi start",
     "build": "vinxi build",
     "serve": "vite preview",
     "test": "vitest run",
@@ -17,25 +17,25 @@
     "@app/auth": "workspace:*",
     "@app/ui": "workspace:*",
     "@hookform/resolvers": "^4.1.3",
-    "@tailwindcss/postcss": "^4.0.7",
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-query": "^5.68.0",
-    "@tanstack/react-query-devtools": "^5.68.0",
-    "@tanstack/react-router": "^1.114.3",
-    "@tanstack/react-router-devtools": "^1.114.3",
-    "@tanstack/react-router-with-query": "^1.114.3",
-    "@tanstack/react-start": "^1.114.3",
-    "@tanstack/router-plugin": "^1.114.3",
+    "@tailwindcss/postcss": "^4.0.15",
+    "@tailwindcss/vite": "^4.0.15",
+    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-query-devtools": "^5.69.0",
+    "@tanstack/react-router": "^1.114.27",
+    "@tanstack/react-router-devtools": "^1.114.27",
+    "@tanstack/react-router-with-query": "^1.114.27",
+    "@tanstack/react-start": "^1.114.27",
+    "@tanstack/router-plugin": "^1.114.27",
     "framer-motion": "^12.5.0",
     "localforage": "^1.10.0",
-    "lucide-react": "0.482.0",
-    "postcss": "^8.5.2",
+    "lucide-react": "0.483.0",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.15",
     "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.5.3",
     "vite-tsconfig-paths": "^5.1.4",
@@ -46,13 +46,13 @@
     "@biomejs/biome": "^1.9.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^6.1.0",
-    "vitest": "^3.0.5",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.2",
+    "vitest": "^3.0.9",
     "web-vitals": "^4.2.4"
   }
 }
