--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -4,8 +4,7 @@
     "@app/database": "workspace:*",
     "@app/mail": "workspace:*",
     "better-auth": "1.2.4",
-    "cookie": "^1.0.2",
-    "next": "15.2.3"
+    "cookie": "^1.0.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
