feat: Icon package added

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,8 @@
     "./postcss.config": "./postcss.config.mjs",
     "./lib/*": "./src/lib/*.ts",
     "./components/*": "./src/components/*.tsx",
+    "./icons/*": "./src/icons/*.ts",
+    "./icons": "./src/icons/index.ts",
     "./hooks/*": "./src/hooks/*.ts"
   },
   "scripts": {
