--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "0.483.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-complex-tree": "^2.6.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
