--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@app/auth": "workspace:*",
     "@app/ui": "workspace:*",
+    "@app/layout": "workspace:*",
     "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/postcss": "^4.0.15",
     "@tailwindcss/vite": "^4.0.15",
