feat: style updates

--- a/packages/layout/tsconfig.json
+++ b/packages/layout/tsconfig.json
@@ -3,6 +3,7 @@
   "extends": "@app/typescript-config/react-library.json",
   "compilerOptions": {
     "moduleResolution": "bundler",
+    "module": "ESNext",
     "noEmit": true,
     "sourceMap": true
   },
