--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@app/auth": "workspace:*",
-    "@app/ui": "workspace:*",
     "@app/layout": "workspace:*",
+    "@app/ui": "workspace:*",
     "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/postcss": "^4.0.15",
     "@tailwindcss/vite": "^4.0.15",
@@ -27,6 +27,8 @@
     "@tanstack/react-router-with-query": "^1.114.27",
     "@tanstack/react-start": "^1.114.27",
     "@tanstack/router-plugin": "^1.114.27",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "framer-motion": "^12.5.0",
     "localforage": "^1.10.0",
     "lucide-react": "0.483.0",
